--- a/style.css
+++ b/style.css
@@ -20,8 +20,8 @@ header{
     position: fixed;
     display: flex;
     width: 100%;
-    height: 7%;
-    background-color: rgb(28, 28, 28);
+    height: 12%;
+    background-color: #17252A;
     text-align: center;
     align-items: center;
     justify-content: space-between;
@@ -34,11 +34,11 @@ header{
 }
 .logo{
     margin: 10px 0 10px 30px;
-    width: 100px;
+    width: 200px;
     height: auto;
 }
 nav a{
-    color:rgb(255, 255, 255);
+    color:#FFEADB;
     font-size: 20px;
     padding: 0 15px 0 15px;
     text-decoration: none;
@@ -46,7 +46,7 @@ nav a{
 }
 nav a:hover{
     padding: 5px 10px;
-    background: rgb(26, 26, 200);
+    background: #679B9B;
     color: rgb(255, 255, 255);
     border-radius: 15px;
 }
@@ -143,14 +143,16 @@ section a:hover{
     width: 600px;
 }
 section:nth-child(2){
-    background-image: linear-gradient(to bottom, orange 0%, rgb(255, 55, 0) 100%);
+    background-color: #507991;
 }
 section:nth-child(3){
-    background-image: linear-gradient(to left, purple 0%, rgb(205, 121, 171) 100%);
+    background-color: #507991;
 }
 section:nth-child(4){
-    background-image: linear-gradient(to left, green 0%, rgb(7, 72, 11) 100%);
+    background-color: #507991;
+
 }
 section:nth-child(5){
-    background-image: linear-gradient(to left, rgb(255, 119, 189) 0%, rgb(243, 84, 113) 100%);
+    background-color: #507991;
+
 }
