--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ section{
     padding-top: 40px;
     padding-left: 60px;
     padding-right: 60px;
-    height: 800px;
+    height: 100vh;
     display: flex;
     justify-content: space-around;
     /*text-align: center;*/
@@ -65,9 +65,16 @@ section{
     width: 500px;
     height: 600px;
 }
-.texto2{
-    width: 500px;
+*/
+.nosotros
+{
+    display: flex;
 }
+.contenedorSection2{
+    text-align: center;
+
+}
+/*
 .texto3{
     width: 500px;
 }
@@ -91,11 +98,10 @@ section p{
     width: 600px;
 }
 #texto1{
+    font-size: 50px;
     width: 700px;
 }
-.texto1{
-    width: 700;
-}
+
 section a{
     font-size: 20px;
     display: inline-block;
@@ -121,38 +127,31 @@ section a:hover{
     flex-direction: row-reverse;
     text-align: center;
 }
+
 #section3{
-    flex-direction: row-reverse;
-    text-align: end;
-}
-#imag1{
-    height: auto;
-    width: 500px;;
-}
-#imag2{
-   width: 400px;
-}
-#imag3{
-    margin-left: 60px;
-    height: auto;
-    width: 400px;
-}
-#imag4{
-    margin-right: 60px;
-    height: auto;
-    width: 600px;
+    flex-direction: row;
+    -ms-flex-align: center;
+    text-align: left;
 }
 section:nth-child(2){
     background-color: #507991;
 }
 section:nth-child(3){
-    background-color: #507991;
+    background-color: #50396b;
 }
 section:nth-child(4){
-    background-color: #507991;
+    background-color: #c0a52e;
 
 }
 section:nth-child(5){
-    background-color: #507991;
+    background-color: #27833b;
+
+}
+
+
+
+.footer{
+text-align: center;
+
 
 }
