--- a/style.css
+++ b/style.css
@@ -16,17 +16,11 @@ header{
    height: 300px;
    background-color: aqua;
 }*/
-.menu{
-    position: fixed;
+#menu{
     display: flex;
-    width: 100%;
-    height: 12%;
-    background-color: #17252A;
-    text-align: center;
-    align-items: center;
-    justify-content: space-between;
-
+    justify-content:flex-end;
 }
+
 .titulo1{
     height: 150px;
     margin: 0 0 40px 0;
@@ -66,14 +60,25 @@ section{
     height: 600px;
 }
 */
+
+.nosotros p{
+    width: 400px;
+}
+
 .nosotros
 {
     display: flex;
 }
+
 .contenedorSection2{
     text-align: center;
 
 }
+
+.contenedorSection2 h3{
+    margin-bottom: 100px;
+}
+
 /*
 .texto3{
     width: 500px;
@@ -152,15 +157,28 @@ section:nth-child(5){
   }
 
 #articulo1 {
-    flex-direction: row-reverse;
-    text-align: center;
+    display: flex;
+}
+ 
+.Imagensomos img
+{
+ height: 200px;
+ border-radius: 10px;
 }
 
 
 
-
-.footer{
-text-align: center;
-
-
+#footer{
+    color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+height: 50px;
 }
+
+footer img{
+    height: 40px;
+    text-decoration: none;
+}
+
