--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@
 html{
     scroll-behavior: smooth;
 }
+.menu{
+    width: 100%;
+    position: fixed;
+}
 /*
 body{
     /*background-image: linear-gradient(to bottom, orange 0%, rgb(255, 55, 0) 100%);
@@ -16,10 +20,6 @@ header{
    height: 300px;
    background-color: aqua;
 }*/
-#menu{
-    display: flex;
-    justify-content:flex-end;
-}
 
 .titulo1{
     height: 150px;
@@ -31,19 +31,7 @@ header{
     width: 200px;
     height: auto;
 }
-nav a{
-    color:#FFEADB;
-    font-size: 20px;
-    padding: 0 15px 0 15px;
-    text-decoration: none;
-    transition: all 0.5s ease;
-}
-nav a:hover{
-    padding: 5px 10px;
-    background: #679B9B;
-    color: rgb(255, 255, 255);
-    border-radius: 15px;
-}
+
 section{
     padding-top: 40px;
     padding-left: 60px;
@@ -107,27 +95,6 @@ section p{
     width: 700px;
 }
 
-section a{
-    font-size: 20px;
-    display: inline-block;
-    padding: 5px;
-    margin: 10px 5px 0 0;
-    color: rgb(28 37 73);
-    text-decoration: none;
-    width: 100px;
-    text-align: center;
-    border: 1px solid #fff;
-    border-radius: 45px;
-    background-color: #fff;
-    transition: all 0.5s ease;
-}
-section a:hover{
-    padding: 5px;
-    background: blue;
-    color: white;
-    border: blue;
-    border-radius: 70px;
-}
 #section1{
     flex-direction: row-reverse;
     text-align: center;
@@ -159,15 +126,11 @@ section:nth-child(5){
 #articulo1 {
     display: flex;
 }
- 
 .Imagensomos img
 {
  height: 200px;
  border-radius: 10px;
 }
-
-
-
 #footer{
     color: rgb(255, 255, 255);
     background-color: rgb(0, 0, 0);
@@ -182,3 +145,38 @@ footer img{
     text-decoration: none;
 }
 
+#sectioncard{
+    display: flex;
+    flex-direction: column;
+}
+.container__card{
+    margin: 0px;
+    display: flex;
+    flex-wrap: wrap;
+}
+.card{
+    width: 150px;
+    height: 270px;
+    margin: 50px;
+    margin-top: 60px;
+    border-radius: 6px;
+    overflow: hidden;
+    background-color: white;
+    box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
+    transition: all 400ms ease;
+}
+.card:hover{
+    box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
+    transform: translateY(-3%);
+}
+.card img{
+  width: 100%;
+}
+.textocard{
+    padding: 10px;
+    text-align: center;
+}
+.textocard a{
+    font-size: 25px;
+    text-decoration: none;
+}
