--- a/sin__servicio.css
+++ b/sin__servicio.css
@@ -39,3 +39,35 @@
     background: blue;
     color: white;
     border: blue;
+}
+
+/*Correción Error dispositivos pequeños*/ 
+@media(max-width: 980px){
+    
+    .imgservicio{
+        width: 750px;
+        height: 750px;
+        margin-top: 30px;
+        background-color: rgb(255, 247, 24);
+        padding: 50px;
+        border-radius: 200px;
+    }
+    .texto404 h1{
+        font-size: 100px;
+        margin-bottom: 30px;
+    }
+    .texto404 p{
+        margin: 30px 0 50px 0;
+        font-size: 60px;
+    }
+    .texto404 a{
+        text-decoration: none;
+        font-size: 60px;
+        margin: 20px;
+        padding: 20px;
+        border-style: solid;
+        border-radius: 50px;
+        background-color: white;
+        color: blue;
+    }
+}
