--- a/style.css
+++ b/style.css
@@ -180,3 +180,130 @@ footer img{
     font-size: 25px;
     text-decoration: none;
 }
+
+@media (max-width: 980px){
+
+section{
+    padding-top: 40px;
+    padding-left: 60px;
+    padding-right: 60px;
+    height: 3500px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    /*text-align: center;*/
+    align-items: center;
+}
+  /*Correción de quienes somos dispositivos pequeños*/ 
+.nosotros
+{
+    display: flex;
+    flex-direction: column;
+}
+.Imagensomos img
+{
+ height: 600px;
+ border-radius: 10px;
+}
+.nosotros p{
+    width: 800px;
+}
+
+section h3{
+    font-size: 100px;
+    font-weight: 500px;
+    margin-bottom: 10px;
+}
+section p{
+    font-size: 40px;
+    margin-bottom: 20px;
+    width: 600px;
+}
+section h4 {
+    font-size: 65px;
+}
+ /*Correción de inicio dispositivos pequeños*/ 
+#section1{
+    flex-direction: column-reverse;
+    text-align: center;
+    height: 1750px;
+}
+#texto1{
+    font-size: 60px;
+    width: 700px;
+}
+
+/*Correción de Categorias dispositivos pequeños*/ 
+#sectioncard{
+    display: flex;
+    flex-direction: column;
+}
+.container__card{
+    height: 1700px;
+    margin-top: 0px;
+    margin: 0px;
+    display: flex;
+    flex-wrap: wrap;
+}
+.card{
+    width: 320px;
+    height: 450px;
+    border-radius: 6px;
+    overflow: hidden;
+    background-color: white;
+    box-shadow: 0px 1px 10px rgba(0,0,0,0.2);
+    transition: all 400ms ease;
+}
+.card:hover{
+    box-shadow: 5px 5px 20px rgba(0,0,0,0.4);
+    transform: translateY(-3%);
+}
+.card img{
+  width: 100%;
+}
+.textocard{
+    padding: 0px;
+    text-align: center;
+}
+.textocard a{
+    font-size: 50px;
+    text-decoration: none;
+}
+/*Correción de Contactanos   dispositivos pequeños*/ 
+#section3{
+    flex-direction: row;
+    -ms-flex-align: center;
+    text-align: center;
+    font-size: 40px;
+    height: 1500px;
+}
+#section3 h3{
+    margin-bottom: 30px;
+}
+/*Correción de footer dispositivos pequeños*/ 
+
+#footer{
+    color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+height: 200px;
+font-size: 30px;
+}
+
+footer img{
+    height: 75px;
+    text-decoration: none;
+    
+}
+
+/*Correción de navbar dispositivos pequeños*/ 
+.menu{  
+    width: 100%;
+    position: fixed;
+    font-size: 40px;
+}
+
+
+}
