--- a/sin__servicio.css
+++ b/sin__servicio.css
@@ -3,6 +3,9 @@
     padding: 0;
     box-sizing: border-box;
 }
+body{
+    background-color: bisque;
+}
 .contenedor404{
     width: 100%;
     height: 100vh;
