--- a/estilopaginas.css
+++ b/estilopaginas.css
@@ -62,6 +62,19 @@ section{
     height: 900px;
     background-color: rgb(225, 173, 99);
 }
+#footer{
+    color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 50px;
+}
+
+footer img{
+    height: 40px;
+    text-decoration: none;
+}
  
 @media (max-width: 980px){
     /*Correción de navbar dispositivos pequeños*/
@@ -138,5 +151,21 @@ section{
     width: 210px;
     height: 1700px;
     background-color: rgb(225, 173, 99);
+}
+#footer{
+    color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: column;
+    height: 30%;
+    font-size: 30px;
+}
+
+footer img{
+    height: 60px;
+    text-decoration: none;
+    
 }
 }
