--- a/style.css
+++ b/style.css
@@ -194,13 +194,11 @@ section{
     align-items: center;
 }
   /*Correción de quienes somos dispositivos pequeños*/ 
-.nosotros
-{
+.nosotros{
     display: flex;
     flex-direction: column;
 }
-.Imagensomos img
-{
+.Imagensomos img{
  height: 600px;
  border-radius: 10px;
 }
@@ -234,6 +232,7 @@ section h4 {
 
 /*Correción de Categorias dispositivos pequeños*/ 
 #sectioncard{
+    height: 100vh;
     display: flex;
     flex-direction: column;
 }
@@ -274,7 +273,7 @@ section h4 {
     -ms-flex-align: center;
     text-align: center;
     font-size: 40px;
-    height: 1500px;
+    height: 100vh;
 }
 #section3 h3{
     margin-bottom: 30px;
@@ -287,12 +286,13 @@ section h4 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-height: 200px;
-font-size: 30px;
+    flex-direction: column;
+    height: 30%;
+    font-size: 30px;
 }
 
 footer img{
-    height: 75px;
+    height: 60px;
     text-decoration: none;
     
 }
@@ -303,6 +303,5 @@ footer img{
     position: fixed;
     font-size: 40px;
 }
-
 
 }
