--- a/estilopaginas.css
+++ b/estilopaginas.css
@@ -89,6 +89,9 @@ section{
     width: 100%; 
 }
 
+header ul{
+    font-size: 30px;
+}
 /*Correción de Incio dispositivos pequeños*/ 
 
 .inicio{
@@ -123,10 +126,8 @@ section{
 }
 
 .contenido{ 
-    padding: 60px;
-    padding-top: 100px;
-    width: 700px;
-    height: 1700px;
+    padding-top: 0px;
+    padding: 0px;
     background-color: aliceblue;
 }
 .contenido h2{
@@ -145,27 +146,47 @@ section{
 }
 
 .imagenes{
-    padding-top: 100px;
+    padding-top: 0px;
+    height: 800px;
     text-align: center;
     flex-direction: row;
-    width: 210px;
-    height: 1700px;
     background-color: rgb(225, 173, 99);
 }
+
+/*Correción de footer dispositivos pequeños*/ 
+
 #footer{
     color: rgb(255, 255, 255);
     background-color: rgb(0, 0, 0);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-direction: column;
-    height: 30%;
-    font-size: 30px;
+height: 200px;
+font-size: 30px;
 }
 
 footer img{
-    height: 60px;
+    height: 75px;
     text-decoration: none;
     
 }
+
+#footer {
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+}
+
+footer p{
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+}
+
+#imgfooter {
+    padding-bottom: 30px;
+}
+
+
+
 }
