--- a/style.css
+++ b/style.css
@@ -36,8 +36,6 @@ section {
     justify-content: space-around;
     align-items: center;
 }
-
-
 .nosotros p {
     width: 400px;
 }
@@ -55,10 +53,6 @@ section {
     margin-bottom: 100px;
 }
 
-.texto3 {
-    background-color: aliceblue;
-    padding: 20px;
-}
 
 section h2 {
     color: black;
@@ -89,10 +83,43 @@ section p {
     text-align: center;
 }
 
-#section3 {
-    flex-direction: row;
-    -ms-flex-align: center;
-    text-align: left;
+form{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background-color: aliceblue;
+    padding: 20px 25px;
+    width: 500px;
+    border-radius: 40px;
+}
+
+#tituloRegistro{
+    font-size: 35px;
+    font-weight: 800;
+    margin-bottom: 30px;
+    color: rgb(225, 173, 99);
+}
+form label{
+    margin-bottom: 30px;
+}
+form label input{
+    outline: none;
+    border: solid 1px;
+    font-size: 18px;
+    padding: 5px 100px 5px 5px;
+}
+form label input::placeholder{
+    color: rgba(107, 99, 89, 0.767)
+}
+
+
+.button{
+    background-color:rgb(225, 173, 99);
+    color: aliceblue;
+    border-radius: 5px;
+    border: solid 1px;
+    padding: 5px;
+    width: 100%;
 }
 
 #articulo {
